--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.96",
     "bootstrap": "^5.3.6",
+    "framer-motion": "^12.17.3",
+    "mongoose": "^8.15.2",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-scroll": "^1.9.3",
+    "react-typed": "^2.0.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
